# RustNet

./: Cargo.toml  README.md  model.json  predictions.csv  rf_data.csv  rfdatagenerator.py  visualize.py
src/: activations.rs  data.rs  layers.rs  lib.rs  loss.rs  serde_arrays.rs  train.rs
